Fixed github action name

--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -1,4 +1,4 @@
-name: Publish package to the Maven Snapshot Repository
+name: Create package
 on:
   # Trigger the workflow on push or pull request,
   # but only for the main branch
