--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,38 +1,33 @@
-#name: Publish package to the Maven Staging Repository
-#on:
-#  release:
-#    types: [published]
-#jobs:
-#  publish:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: Set env
-#        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-#      - name: Set up Maven Central Repository
-#        uses: actions/setup-java@v2
-#        with:
-#          java-version: '8'
-#          distribution: 'adopt'
-#          server-id: ossrh
-#          server-username: MAVEN_USERNAME
-#          server-password: MAVEN_PASSWORD
-#      - id: install-secret-key
-#        name: Install gpg secret key
-#        run: |
-#          cat <(echo -e "${{ secrets.OSSRH_GPG_SECRET_KEY }}") | gpg --batch --import
-#          gpg --list-secret-keys --keyid-format LONG
-#      - name: Publish package
-#        run: |
-#            mvn \
-#              --batch-mode \
-#              versions:set \
-#              -DnewVersion=${{ env.RELEASE_VERSION }} \
-#            && mvn -Pgithub-publish \
-#              --no-transfer-progress \
-#              --batch-mode \
-#              -Dgpg.passphrase=${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }} \
-#              clean site deploy
-#        env:
-#          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-#          MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+name: Publish package to the Docker Hub
+on:
+  release:
+    types: [published]
+jobs:
+  publish:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      - name: Set up Maven Central Repository
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+      - name: Create package
+        run: |
+            mvn \
+              --batch-mode \
+              versions:set \
+              -DnewVersion=${{ env.RELEASE_VERSION }} \
+            && mvn --no-transfer-progress \
+              --batch-mode \
+              clean package
+      - name: Build the tagged Docker image
+        run: docker build . --file Dockerfile --tag wolfetti/java-ssh-tunnelizer:${{ env.RELEASE_VERSION }}
+      - name: Push the tagged Docker image
+        run: docker push wolfetti/java-ssh-tunnelizer:${{ env.RELEASE_VERSION }}
+      - name: Build the latest Docker image
+        run: docker build . --file Dockerfile --tag wolfetti/java-ssh-tunnelizer:latest
+      - name: Push the latest Docker image
+        run: docker push wolfetti/java-ssh-tunnelizer:latest
