--- a/src/main/resources/application-dev.example.yml
+++ b/src/main/resources/application-dev.example.yml
@@ -15,8 +15,13 @@ tunnel:
     # Host IP address
     host: 1.2.3.4
         
-    # Port to tunnelize. This port is also exposed on local host.
+    # Port to tunnelize.
+    # This port is also exposed on localhost if ${tunnel.local-port} is not set
     port: 1234
+    
+    # Port to expose tunnel on localhost.
+    # Default value is ${tunnel.port}
+    #local-port: 2345
   
 # SSH Connection parameters.
 ssh:
@@ -24,12 +29,13 @@ ssh:
     # SSH host IP address or hostname
     host: 2.3.4.5
         
-    # SSH port (defaults to 22)
+    # SSH port
+    # Default value is 22
     #port: 22
         
     # SSH username
     user: myawesomeuser
         
-    # SSH private key path 
-    # (it wull be a Spring Resource. defaults to classpath:private.key)
+    # SSH private key SpringResource compatible path 
+    # Default value is "classpath:private.key"
     #private-key: classpath:private.key
