--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -23,9 +23,15 @@ jobs:
             mvn --no-transfer-progress \
               --batch-mode \
               clean package
-      - name: Build the latest Docker image
-        run: docker build . --file Dockerfile --tag wolfetti/java-ssh-tunnelizer:latest
+      # - name: Build the latest Docker image
+      #   run: docker build . --file Dockerfile --tag wolfetti/java-ssh-tunnelizer:latest
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DK_REGISTRY_PASS }} | docker login -u ${{ secrets.DK_REGISTRY_USER }} --password-stdin
-      - name: Push the latest Docker image
-        run: docker push wolfetti/java-ssh-tunnelizer:latest
+      # - name: Push the latest Docker image
+      #   run: docker push wolfetti/java-ssh-tunnelizer:latest
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64,linux/arm
+          tags: latest
