--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -23,12 +23,8 @@ jobs:
             mvn --no-transfer-progress \
               --batch-mode \
               clean package
-      # - name: Build the latest Docker image
-      #   run: docker build . --file Dockerfile --tag wolfetti/java-ssh-tunnelizer:latest
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DK_REGISTRY_PASS }} | docker login -u ${{ secrets.DK_REGISTRY_USER }} --password-stdin
-      # - name: Push the latest Docker image
-      #   run: docker push wolfetti/java-ssh-tunnelizer:latest
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
@@ -37,6 +33,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
+          push: true
           context: .
           platforms: linux/amd64,linux/arm64,linux/arm
           tags: latest
