--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -36,4 +36,4 @@ jobs:
           push: true
           context: .
           platforms: linux/amd64,linux/arm64,linux/arm
-          tags: latest
+          tags: wolfetti/java-ssh-tunnelizer:latest
