--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,13 +23,17 @@ jobs:
             && mvn --no-transfer-progress \
               --batch-mode \
               clean package
-      - name: Build the tagged Docker image
-        run: docker build . --file Dockerfile --tag wolfetti/java-ssh-tunnelizer:${{ env.RELEASE_VERSION }}
-      - name: Build the stable Docker image
-        run: docker build . --file Dockerfile --tag wolfetti/java-ssh-tunnelizer:stable
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DK_REGISTRY_PASS }} | docker login -u ${{ secrets.DK_REGISTRY_USER }} --password-stdin
-      - name: Push the tagged Docker image
-        run: docker push wolfetti/java-ssh-tunnelizer:${{ env.RELEASE_VERSION }}
-      - name: Push the stable Docker image
-        run: docker push wolfetti/java-ssh-tunnelizer:stable
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          context: .
+          platforms: linux/amd64,linux/arm64,linux/arm
+          tags: wolfetti/java-ssh-tunnelizer:${{ env.RELEASE_VERSION }}, wolfetti/java-ssh-tunnelizer:stable
