Added GHA cache

--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -38,3 +38,5 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           tags: wolfetti/java-ssh-tunnelizer:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
