--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,34 +6,35 @@ jobs:
   package-and-publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Set env
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - name: Set up Maven Central Repository
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
+          cache: 'maven'
       - name: Create package
         run: |
-            mvn --no-transfer-progress \
-              --batch-mode \
-              versions:set \
-              -DnewVersion=${{ env.RELEASE_VERSION }} \
-            && mvn --no-transfer-progress \
-              --batch-mode \
-              clean package
-      - name: Login to DockerHub Registry
-        run: echo ${{ secrets.DK_REGISTRY_PASS }} | docker login -u ${{ secrets.DK_REGISTRY_USER }} --password-stdin
+            mvn --no-transfer-progress --batch-mode versions:set -DnewVersion=${{ env.RELEASE_VERSION }} \
+            && mvn --no-transfer-progress --batch-mode verify
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DK_REGISTRY_USER }}
+          password: ${{ secrets.DK_REGISTRY_PASS }}
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         id: buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
       - name: Build and push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v5
         with:
           push: true
           context: .
-          platforms: linux/amd64,linux/arm64,linux/arm
+          platforms: linux/amd64,linux/arm64
           tags: wolfetti/java-ssh-tunnelizer:${{ env.RELEASE_VERSION }}, wolfetti/java-ssh-tunnelizer:stable
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
