--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,39 +2,97 @@ name: Publish package to the Docker Hub
 on:
   release:
     types: [published]
+
 jobs:
-  package-and-publish:
-    runs-on: ubuntu-latest
+  build:
+    strategy:
+      matrix:
+        include:
+          - platform: linux/amd64
+            runner: [ubuntu-latest]
+          - platform: linux/arm64
+            runner: [ubuntu-latest, arm64]
+    
+    runs-on: ${{ matrix.runner }}
     steps:
       - uses: actions/checkout@v4
-      - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-      - name: Set up Maven Central Repository
+      
+      - name: Set up Java 21
         uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
           cache: 'maven'
-      - name: Create package
+
+      - name: Set Release Version
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+
+      - name: Update Maven version and Verify
         run: |
-            mvn --no-transfer-progress --batch-mode versions:set -DnewVersion=${{ env.RELEASE_VERSION }} \
-            && mvn --no-transfer-progress --batch-mode verify
+          mvn --no-transfer-progress --batch-mode versions:set -DnewVersion=${{ env.RELEASE_VERSION }}
+          mvn --no-transfer-progress --batch-mode verify
+
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DK_REGISTRY_USER }}
           password: ${{ secrets.DK_REGISTRY_PASS }}
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+
       - name: Set up Docker Buildx
-        id: buildx
         uses: docker/setup-buildx-action@v3
-      - name: Build and push
+
+      - name: Build and push by digest
+        id: build
         uses: docker/build-push-action@v5
         with:
-          push: true
           context: .
-          platforms: linux/amd64,linux/arm64
-          tags: wolfetti/java-ssh-tunnelizer:${{ env.RELEASE_VERSION }}, wolfetti/java-ssh-tunnelizer:stable
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          platforms: ${{ matrix.platform }}
+          # Usiamo i digest per caricare le architetture separatamente senza taggare ancora
+          outputs: type=image,name=wolfetti/java-ssh-tunnelizer,push-by-digest=true,name-canonical=true,push=true
+          cache-from: type=gha,scope=${{ matrix.platform }}
+          cache-to: type=gha,mode=max,scope=${{ matrix.platform }}
+
+      - name: Export digest
+        run: |
+          mkdir -p /tmp/digests
+          digest="${{ steps.build.outputs.digest }}"
+          touch "/tmp/digests/${digest// integrity:/-}"
+          
+      - name: Upload digest
+        uses: actions/upload-artifact@v4
+        with:
+          name: digests-${{ strategy.job-index }}
+          path: /tmp/digests/*
+          if-no-files-found: error
+          retention-days: 1
+
+  publish-release:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Download digests
+        uses: actions/download-artifact@v4
+        with:
+          path: /tmp/digests
+          pattern: digests-*
+          merge-multiple: true
+
+      - name: Set Release Version
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DK_REGISTRY_USER }}
+          password: ${{ secrets.DK_REGISTRY_PASS }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Create manifest and push release tags
+        working-directory: /tmp/digests
+        run: |
+          docker buildx imagetools create \
+            -t wolfetti/java-ssh-tunnelizer:${{ env.RELEASE_VERSION }} \
+            -t wolfetti/java-ssh-tunnelizer:stable \
+            $(printf 'wolfetti/java-ssh-tunnelizer@sha256:%s ' *)
