--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,9 +9,9 @@ jobs:
       matrix:
         include:
           - platform: linux/amd64
-            runner: [ubuntu-latest]
+            runner: ubuntu-latest
           - platform: linux/arm64
-            runner: [ubuntu-latest, arm64]
+            runner: ubuntu-latest-arm64
     
     runs-on: ${{ matrix.runner }}
     steps:
