--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -15,6 +15,10 @@ jobs:
             runner: ubuntu-latest-arm64
     
     runs-on: ${{ matrix.runner }}
+    permissions:
+      contents: read
+      packages: write
+      actions: write
     
     steps:
       - uses: actions/checkout@v4
@@ -43,8 +47,8 @@ jobs:
           platforms: ${{ matrix.platform }}
           # Utilizziamo i digest per permettere il merge finale senza tag duplicati
           outputs: type=image,name=wolfetti/java-ssh-tunnelizer,push-by-digest=true,name-canonical=true,push=true
-          cache-from: type=gha,scope=${{ matrix.platform }}
-          cache-to: type=gha,mode=max,scope=${{ matrix.platform }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Export digest
         run: |
