--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -12,7 +12,7 @@ jobs:
           - platform: linux/amd64
             runner: ubuntu-latest
           - platform: linux/arm64
-            runner: ubuntu-latest-arm64
+            runner: ubuntu-24.04-arm
     
     runs-on: ${{ matrix.runner }}
     permissions:
