--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,10 +32,10 @@ jobs:
       - name: Set Release Version
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
-      - name: Update Maven version and Verify
+      - name: Update Maven version and package
         run: |
           mvn --no-transfer-progress --batch-mode versions:set -DnewVersion=${{ env.RELEASE_VERSION }}
-          mvn --no-transfer-progress --batch-mode verify
+          mvn --no-transfer-progress --batch-mode package
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
