--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -29,6 +29,9 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
           cache: 'maven'
+          
+      - name: Create package
+        run: mvn --no-transfer-progress --batch-mode package
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
