--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,25 +17,28 @@ jobs:
     permissions:
       contents: read
       packages: write
-      actions: write
       
     steps:
       - uses: actions/checkout@v4
       
-      - name: Set up Java 17
-        uses: actions/setup-java@v4
+      - name: Set up GraalVM (Java 21)
+        uses: graalvm/setup-graalvm@v1
         with:
-          java-version: '17'
-          distribution: 'temurin'
+          java-version: '21'
+          distribution: 'graalvm'
+          github-token: ${{ github.token }}
           cache: 'maven'
 
+      - name: Make mvnw executable
+        run: chmod +x mvnw
+
       - name: Set Release Version
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
 
       - name: Update Maven version and package
         run: |
-          mvn --no-transfer-progress --batch-mode versions:set -DnewVersion=${{ env.RELEASE_VERSION }}
-          mvn --no-transfer-progress --batch-mode package
+          ./mvnw --no-transfer-progress --batch-mode versions:set -DnewVersion=${{ env.RELEASE_VERSION }}
+          ./mvnw --no-transfer-progress --batch-mode package -Dnative -DskipTests
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
@@ -48,11 +51,11 @@ jobs:
 
       - name: Build and push by digest
         id: build
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           context: .
           platforms: ${{ matrix.platform }}
-          # Usiamo i digest per caricare le architetture separatamente senza taggare ancora
+          file: src/main/docker/Dockerfile.native
           outputs: type=image,name=wolfetti/java-ssh-tunnelizer,push-by-digest=true,name-canonical=true,push=true
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -60,7 +63,6 @@ jobs:
       - name: Export digest
         run: |
           mkdir -p /tmp/digests
-          # Estraiamo solo la parte esadecimale dopo 'sha256:'
           digest="${{ steps.build.outputs.digest }}"
           echo "${digest}" > "/tmp/digests/${digest#sha256:}"
           
@@ -84,7 +86,7 @@ jobs:
           merge-multiple: true
 
       - name: Set Release Version
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
