--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -1,37 +1,36 @@
-name: Create package
+name: Create snapshot package (Native)
 on:
   push:
     branches: [main]
 
 jobs:
   build:
-    # Utilizziamo la matrice per selezionare il runner nativo corretto
     strategy:
       matrix:
         include:
           - platform: linux/amd64
             runner: ubuntu-latest
           - platform: linux/arm64
-            runner: ubuntu-24.04-arm
+            runner: ubuntu-24.04-arm 
     
     runs-on: ${{ matrix.runner }}
-    permissions:
-      contents: read
-      packages: write
-      actions: write
     
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Java 17
-        uses: actions/setup-java@v4
+      - name: Set up GraalVM (Java 21)
+        uses: graalvm/setup-graalvm@v1
         with:
-          java-version: '17'
-          distribution: 'temurin'
+          java-version: '21'
+          distribution: 'graalvm'
+          github-token: ${{ github.token }}
           cache: 'maven'
-          
-      - name: Create package
-        run: mvn --no-transfer-progress --batch-mode package
+
+      - name: Make mvnw executable
+        run: chmod +x mvnw
+
+      - name: Build Native Executable
+        run: ./mvnw --no-transfer-progress --batch-mode package -Dnative -DskipTests
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
@@ -44,11 +43,11 @@ jobs:
 
       - name: Build and push by digest
         id: build
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           context: .
           platforms: ${{ matrix.platform }}
-          # Utilizziamo i digest per permettere il merge finale senza tag duplicati
+          file: src/main/docker/Dockerfile.native
           outputs: type=image,name=wolfetti/java-ssh-tunnelizer,push-by-digest=true,name-canonical=true,push=true
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -56,7 +55,6 @@ jobs:
       - name: Export digest
         run: |
           mkdir -p /tmp/digests
-          # Estraiamo solo la parte esadecimale dopo 'sha256:'
           digest="${{ steps.build.outputs.digest }}"
           echo "${digest}" > "/tmp/digests/${digest#sha256:}"
           
