--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Update Maven version and package
         run: |
           ./mvnw --no-transfer-progress --batch-mode versions:set -DnewVersion=${{ env.RELEASE_VERSION }}
-          ./mvnw --no-transfer-progress --batch-mode package -Dnative -DskipTests
+          ./mvnw --no-transfer-progress --batch-mode clean package -Dnative -DskipTests
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
