--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -30,7 +30,7 @@ jobs:
         run: chmod +x mvnw
 
       - name: Build Native Executable
-        run: ./mvnw --no-transfer-progress --batch-mode package -Dnative -DskipTests
+        run: ./mvnw --no-transfer-progress --batch-mode clean package -Dnative -DskipTests
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
