--- a/pom.xml
+++ b/pom.xml
@@ -35,9 +35,9 @@
             <artifactId>quarkus-arc</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.github.mwiede</groupId>
-            <artifactId>jsch</artifactId>
-            <version>2.27.7</version>
+            <groupId>io.quarkiverse.jsch</groupId>
+            <artifactId>quarkus-jsch</artifactId>
+            <version>3.1.2</version>
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
@@ -136,17 +136,6 @@
                 <skipITs>false</skipITs>
                 <quarkus.native.enabled>true</quarkus.native.enabled>
                 <quarkus.native.enable-security-services>true</quarkus.native.enable-security-services>
-                <quarkus.native.reflection.include-patterns>com.jcraft.jsch.**</quarkus.native.reflection.include-patterns>
-                <quarkus.native.reflection.all-public-constructors>true</quarkus.native.reflection.all-public-constructors>
-                <quarkus.native.reflection.all-public-methods>true</quarkus.native.reflection.all-public-methods>
-                <quarkus.native.additional-build-args>
-                    --initialize-at-run-time=java.net.InetAddress,
-                    --initialize-at-run-time=java.net.Inet4Address,
-                    --initialize-at-run-time=com.jcraft.jsch.JSch,
-                    --initialize-at-run-time=com.jcraft.jsch.Util,
-                    --initialize-at-run-time=com.jcraft.jsch.Session,
-                    --initialize-at-run-time=com.jcraft.jsch.PortWatcher
-                </quarkus.native.additional-build-args>
             </properties>
         </profile>
     </profiles>
