--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,7 @@
                 <skipITs>false</skipITs>
                 <quarkus.native.enabled>true</quarkus.native.enabled>
                 <quarkus.native.enable-security-services>true</quarkus.native.enable-security-services>
+                <quarkus.native.additional-build-args>--enable-all-security-services</quarkus.native.additional-build-args>
             </properties>
         </profile>
     </profiles>
